fixed wrong padding  in footer

--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -348,10 +348,12 @@ ul, ol
 		text-align: center
 		padding: 0
 		margin: 0
-		padding-top: 10px
+
 		p
 			padding: 0
-			margin: 0
+			margin-bottom: 0px
+			padding-bottom: 10px
+
 		a
 			text-transform: none
 			align-items: center
